feat(graph): 完成多Agent图编排与模型配置中心重构